# navi-SAD

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml  zensical.toml
.claude/: HOOKS.md
.claude/agents/: adapter-discipline-reviewer.md  citation-verifier.md
.claude/skills/adapter-upstream-diff/: SKILL.md  diff_adapter.py
.claude/skills/gate-check/: SKILL.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  docs.yml
docs/: DEBT.md  index.md
docs/getting-started/: installation.md  running-the-gates.md
docs/how-to/: contributing.md
docs/instrument/: adapter-discipline.md  gate-0.md  gate-1.md  gate-2.md  gate-discipline.md
docs/reference/: changelog.md  frozen-decisions.md  glossary.md  module-reference.md
docs/research/: open-problems.md  pilot-findings.md  roadmap.md  three-repo-unification.md
docs/stylesheets/: print.css
docs/theory/: adjacent-literature.md  capacity-gap.md  sad-instrument.md  takens-embedding.md
scripts/: calibrate_gate1.py  pe_confound_controls.py  pe_recurrence_null.py  pilot_gate3.py
src/navi_sad/: __init__.py  logging.py
src/navi_sad/analysis/: __init__.py  eligibility.py  loader.py  matching.py  permutation.py  prep.py  recurrence.py  report.py  selection.py  types.py
src/navi_sad/core/: adapter.py  hooks.py  instrument.py  registry.py  spectral.py  types.py
src/navi_sad/io/: derived.py  reader.py  writer.py
src/navi_sad/pilot/: helpers.py  schema.py
src/navi_sad/signal/: aggregation.py  derivatives.py  ordinal.py  pe_features.py  types.py
src/navi_sad/stats/: __init__.py  effect_size.py
tests/: conftest.py  test_adapter.py  test_aggregation.py  test_analysis_types.py  test_d_matrix.py  test_derivatives.py  test_eligibility.py  test_hooks_mock.py  test_instrument.py  test_io.py  test_loader.py  test_logging.py  test_matching.py  test_ordinal.py  test_pe_features.py  test_permutation.py  test_pilot_analyze.py  test_pilot_helpers.py  test_prep.py  test_recurrence.py  test_registry.py  test_report.py  test_selection.py  test_spectral.py
tests/fixtures/: ordinal_cases.json
tests/gates/: conftest.py  test_gate0_noninterference.py  test_gate1_parity.py  test_gate2_stability.py
