[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "navi-SAD"
version = "0.1.0"
description = "Spectral Attention Divergence — dynamical systems probe for LLM inference via dual-path attention comparison and delay-coordinate attractor reconstruction"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.57,<6.0",
    "numpy>=1.24.0",
    "accelerate>=1.13.0",
    "packaging>=21.0",
]

[project.optional-dependencies]
eval = [
    "datasets>=2.14.0",
]
analysis = [
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff~=0.15.0",
    "mypy~=1.19.0",
    "psutil>=5.9.0",
    "pre-commit>=3.5.0",
]

# To install all optional groups:
#   uv sync --extra eval --extra analysis --extra dev

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "W",      # pycodestyle warnings
    "B",      # flake8-bugbear — mutable defaults, assert False
    "UP",     # pyupgrade — modernize to 3.10+ syntax
    "RUF",    # ruff-specific rules
    "C4",     # flake8-comprehensions
]
ignore = [
    "E501",   # line length handled by formatter
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: marks tests that require a GPU (deselect with '-m \"not gpu\"')",
]
addopts = "-v --tb=short"

[tool.mypy]
files = ["src"]
python_version = "3.10"
check_untyped_defs = true
disallow_untyped_defs = false
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
allow_redefinition = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "transformers.*",
    "datasets.*",
    "scipy.*",
    "sklearn.*",
]
ignore_missing_imports = true

[dependency-groups]
docs = ["zensical>=0.0.24"]
